添加移动逻辑，基本功能实现

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<script type="text/javascript" src='./showanimation2048.js'></script>
 	<script type="text/javascript" src='./main2048.js'></script>
 	<script type="text/javascript">
-		
+		console.log("222")
 	</script>
 </body>
 </html>
